Use JDK unmodifiable collections in SPI