@@ -17,8 +17,6 @@ import io.airlift.slice.Slice;
 import io.prestosql.spi.block.Block;
 import io.prestosql.spi.block.BlockBuilder;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public abstract class AbstractType
@@ -54,7 +52,7 @@ public abstract class AbstractType
     @Override
     public List<Type> getTypeParameters()
     {
-        return Collections.unmodifiableList(new ArrayList<>());
+        return List.of();
     }
 
     @Override
